include/flowi/vfs/vfs.h

// @generated by api_gen - DO NOT EDIT. Regenerate with cargo regen.

#pragma once

#include <flowi/fl_api.h>
#include <stdbool.h>
#include <stdint.h>
#include <flowi/core/string.h>
#include <flowi/vfs/vfs_plugin.h>

#ifdef __cplusplus
extern "C" {
#endif

// Mount readiness - the coarse state vfs_mount_get_status reports. Distinct from
// the driver-side hierarchical FlVfsStatus: consumers poll readiness only.
typedef enum FlVfsMountStatus {
    // Mount operation in progress.
    FlVfsMountStatus_Pending = 0,
    // Mount completed successfully.
    FlVfsMountStatus_Ready = 1,
    // Mount failed.
    FlVfsMountStatus_Error = 2,
} FlVfsMountStatus;

// Async operation priority - maps to the job system priority. Low is background/
// prefetch (runs when workers are idle); High/Highest is user-visible content.
typedef enum FlVfsLoadPriority {
    // Background/prefetch - lowest priority.
    FlVfsLoadPriority_Low = 0,
    // Default priority.
    FlVfsLoadPriority_Normal = 1,
    // High priority - visible content.
    FlVfsLoadPriority_High = 2,
    // Highest priority (maps to High in the job system).
    FlVfsLoadPriority_Highest = 3,
} FlVfsLoadPriority;

// Detailed mount error code - the status field of VfsMountResult. Check for
// Success before using the returned mount pointer.
typedef enum FlVfsMountErrorStatus {
    // Mount succeeded.
    FlVfsMountErrorStatus_Success = 0,
    // Source path is empty or invalid.
    FlVfsMountErrorStatus_InvalidPath = 1,
    // No VFS plugin available to handle the source.
    FlVfsMountErrorStatus_PluginNotFound = 2,
    // Plugin failed to mount (permission, not found, etc.).
    FlVfsMountErrorStatus_MountFailed = 3,
    // Memory allocation failed.
    FlVfsMountErrorStatus_OutOfMemory = 4,
    // VFS system not initialized.
    FlVfsMountErrorStatus_NotInitialized = 5,
} FlVfsMountErrorStatus;

typedef struct FlVfsMount FlVfsMount;

// Result of a file-read operation. Check success; data/size are the read
// bytes, owned by the VFS and freed on close.
typedef struct FlVfsData {
    // File data (nullptr on error).
    uint8_t* data;
    // File size in bytes (0 on error).
    int64_t size;
    // false if the operation failed.
    bool success;
    // Human-readable error message (empty if success).
    FlString error_message;
} FlVfsData;

// Optional post-processing callback invoked on read data. Receives the raw
// buffer, its size, and the caller's opaque user_data; returns the (possibly
// transformed) VfsData. A failed read invokes it once with data == nullptr
// and size == 0 so it can release what user_data owns; the VfsData it
// returns is ignored on that path.
typedef FlVfsData (*FlVfsReadCallback)(void* data, int64_t size, void* user_data);

// Result of a mount operation: a mount handle plus a detailed status. Check
// status == FlVfsMountErrorStatus_Success before using mount.
typedef struct FlVfsMountResult {
    // Mount handle (nullptr on error).
    FlVfsMount* mount;
    // Success or a specific error code.
    FlVfsMountErrorStatus status;
    // Human-readable error message (empty on success).
    FlString error_message;
} FlVfsMountResult;

// Result of a directory-listing operation. Check success; entries is a
// borrowed array of count entries valid until the owning handle is closed.
typedef struct FlVfsFileList {
    // Array of entries (nullptr on error).
    FlVfsEntry* entries;
    // Number of entries (0 on error).
    uint32_t count;
    // Version of the mount when the listing was created.
    uint32_t mount_version;
    // false if the operation failed.
    bool success;
    // Human-readable error message (empty if success).
    FlString error_message;
} FlVfsFileList;

// Mount information reported by vfs_mount_get_info.
typedef struct FlVfsMountInfo {
    // Original mount path.
    FlString path;
    // Mount is ready for operations.
    bool is_ready;
} FlVfsMountInfo;

// The `fl_vfs_*` consumer service API - non-blocking virtual filesystem access
// exported as plain C symbols the toolkit and plugins call directly. All operations are async: launch
// returns a handle, then poll vfs_is_ready before reading the result. Plugins link the shared library and call these symbols directly.
// Direct API - hand-written bodies.
// Mount a resource (archive, URL, or directory) with options.
FL_API FlVfsMountResult vfs_mount_with_options(FlString source_path, FlVfsMountOptions options);
// Check if a mount is ready for operations (non-blocking).
FL_API bool vfs_mount_is_ready(FlVfsMount* mount);
// Get a mount's status.
FL_API FlVfsMountStatus vfs_mount_get_status(FlVfsMount* mount);
// Get a mount's information.
FL_API FlVfsMountInfo vfs_mount_get_info(FlVfsMount* mount);
// Close and clean up a mount.
FL_API void vfs_mount_close(FlVfsMount* mount);
// Enable file watching for a mount (LocalFS only). Must be called before the
// mount is ready. Returns true if watching was enabled.
FL_API bool vfs_mount_enable_watching(FlVfsMount* mount);
// Read an entire file from within a mount (async). Returns a tracking handle.
FL_API uint32_t vfs_mount_read_all_with_options(FlVfsMount* mount, FlString relative_path, FlVfsReadCallback callback, void* user_data, uint32_t reuse_handle);
// Open a file for reading/writing within a mount. Returns a file handle.
FL_API uint32_t vfs_mount_open(FlVfsMount* mount, FlString relative_path, uint32_t flags);
// Read at most size bytes from an open file into buffer (async, chained
// onto the file handle). The caller keeps buffer alive until the returned
// handle completes. Returns a tracking handle.
FL_API uint32_t vfs_read(uint32_t file_handle, void* buffer, int64_t size);
// Write data to an open file (async, copies data). Returns a tracking handle.
FL_API uint32_t vfs_write(uint32_t file_handle, const void* data, int64_t size);
// Write data to an open file (async, no copy - caller keeps the buffer alive
// until the write completes). Returns a tracking handle.
FL_API uint32_t vfs_write_no_copy(uint32_t file_handle, void* data, int64_t size);
// List directory contents within a mount (async). Returns a directory handle.
FL_API uint32_t vfs_get_listing(FlVfsMount* mount, FlString relative_path, int32_t depth);
// List a directory with a fuzzy filter (async).
FL_API uint32_t vfs_get_listing_filtered(FlVfsMount* mount, FlString relative_path, int32_t depth, FlString filter_needle);
// Apply a fuzzy filter to an existing (complete) listing (async).
FL_API uint32_t vfs_apply_fuzzy_filter(uint32_t source_handle, FlString needle);
// Check if an async operation is complete (non-blocking).
FL_API bool vfs_is_ready(uint32_t handle);
// Block until an async operation completes. The wait participates in the job
// system - a worker thread that calls it keeps stealing work instead of idling -
// so it is safe from inside a job body. Never call it from the frame loop.
FL_API void vfs_wait(uint32_t handle);
// Get the data from a completed read operation. Call only after vfs_is_ready.
FL_API FlVfsData vfs_get_data(uint32_t handle);
// Get the file list from a completed directory operation. Call only after
// vfs_is_ready.
FL_API FlVfsFileList vfs_get_file_list(uint32_t handle);
// Update the priority of a pending operation.
FL_API void vfs_set_priority(uint32_t handle, FlVfsLoadPriority priority);
// Close a handle and clean up its resources.
FL_API void vfs_close(uint32_t handle);
// Check if a directory listing is still current (its version matches the
// current mount version).
FL_API bool vfs_is_listing_current(uint32_t handle);


#ifdef __cplusplus
}
#endif