rust/flowi_vfs_sys/src/generated/vfs.rs

// @generated by api_gen - DO NOT EDIT. Regenerate with cargo regen.

/// Mount readiness - the coarse state vfs_mount_get_status reports. Distinct from
/// the driver-side hierarchical FlVfsStatus: consumers poll readiness only.
#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum VfsMountStatus {
    /// Mount operation in progress.
    Pending = 0,
    /// Mount completed successfully.
    Ready = 1,
    /// Mount failed.
    Error = 2,
}

const _: () = {
    assert!(core::mem::size_of::<VfsMountStatus>() == 4, "VfsMountStatus size drift");
    assert!(core::mem::align_of::<VfsMountStatus>() == 4, "VfsMountStatus align drift");
};

/// Async operation priority - maps to the job system priority. Low is background/
/// prefetch (runs when workers are idle); High/Highest is user-visible content.
#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum VfsLoadPriority {
    /// Background/prefetch - lowest priority.
    Low = 0,
    /// Default priority.
    Normal = 1,
    /// High priority - visible content.
    High = 2,
    /// Highest priority (maps to High in the job system).
    Highest = 3,
}

const _: () = {
    assert!(core::mem::size_of::<VfsLoadPriority>() == 4, "VfsLoadPriority size drift");
    assert!(core::mem::align_of::<VfsLoadPriority>() == 4, "VfsLoadPriority align drift");
};

/// Detailed mount error code - the status field of VfsMountResult. Check for
/// Success before using the returned mount pointer.
#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum VfsMountErrorStatus {
    /// Mount succeeded.
    Success = 0,
    /// Source path is empty or invalid.
    InvalidPath = 1,
    /// No VFS plugin available to handle the source.
    PluginNotFound = 2,
    /// Plugin failed to mount (permission, not found, etc.).
    MountFailed = 3,
    /// Memory allocation failed.
    OutOfMemory = 4,
    /// VFS system not initialized.
    NotInitialized = 5,
}

const _: () = {
    assert!(core::mem::size_of::<VfsMountErrorStatus>() == 4, "VfsMountErrorStatus size drift");
    assert!(core::mem::align_of::<VfsMountErrorStatus>() == 4, "VfsMountErrorStatus align drift");
};

pub enum FlVfsMount {}

/// Optional post-processing callback invoked on read data. Receives the raw
/// buffer, its size, and the caller's opaque user_data; returns the (possibly
/// transformed) VfsData. A failed read invokes it once with data == nullptr
/// and size == 0 so it can release what user_data owns; the VfsData it
/// returns is ignored on that path.
pub type VfsReadCallback = Option<unsafe extern "C" fn(data: *mut core::ffi::c_void, size: i64, user_data: *mut core::ffi::c_void) -> crate::VfsData>;

/// Result of a mount operation: a mount handle plus a detailed status. Check
/// status == FlVfsMountErrorStatus_Success before using mount.
#[repr(C)]
pub struct VfsMountResult {
    /// Mount handle (nullptr on error).
    pub mount: *mut FlVfsMount,
    /// Success or a specific error code.
    pub status: crate::VfsMountErrorStatus,
    /// Human-readable error message (empty on success).
    pub error_message: crate::RawStr,
}

const _: () = {
    assert!(core::mem::size_of::<VfsMountResult>() == 32, "VfsMountResult size drift");
    assert!(core::mem::align_of::<VfsMountResult>() == 8, "VfsMountResult align drift");
    assert!(core::mem::offset_of!(VfsMountResult, mount) == 0, "VfsMountResult.mount offset drift");
    assert!(core::mem::offset_of!(VfsMountResult, status) == 8, "VfsMountResult.status offset drift");
    assert!(core::mem::offset_of!(VfsMountResult, error_message) == 16, "VfsMountResult.error_message offset drift");
};

/// Result of a directory-listing operation. Check success; entries is a
/// borrowed array of count entries valid until the owning handle is closed.
#[repr(C)]
pub struct VfsFileList {
    /// Array of entries (nullptr on error).
    pub entries: *mut crate::VfsEntry,
    /// Number of entries (0 on error).
    pub count: u32,
    /// Version of the mount when the listing was created.
    pub mount_version: u32,
    /// false if the operation failed.
    pub success: bool,
    /// Human-readable error message (empty if success).
    pub error_message: crate::RawStr,
}

const _: () = {
    assert!(core::mem::size_of::<VfsFileList>() == 40, "VfsFileList size drift");
    assert!(core::mem::align_of::<VfsFileList>() == 8, "VfsFileList align drift");
    assert!(core::mem::offset_of!(VfsFileList, entries) == 0, "VfsFileList.entries offset drift");
    assert!(core::mem::offset_of!(VfsFileList, count) == 8, "VfsFileList.count offset drift");
    assert!(core::mem::offset_of!(VfsFileList, mount_version) == 12, "VfsFileList.mount_version offset drift");
    assert!(core::mem::offset_of!(VfsFileList, success) == 16, "VfsFileList.success offset drift");
    assert!(core::mem::offset_of!(VfsFileList, error_message) == 24, "VfsFileList.error_message offset drift");
};

/// Result of a file-read operation. Check success; data/size are the read
/// bytes, owned by the VFS and freed on close.
#[repr(C)]
pub struct VfsData {
    /// File data (nullptr on error).
    pub data: *mut u8,
    /// File size in bytes (0 on error).
    pub size: i64,
    /// false if the operation failed.
    pub success: bool,
    /// Human-readable error message (empty if success).
    pub error_message: crate::RawStr,
}

const _: () = {
    assert!(core::mem::size_of::<VfsData>() == 40, "VfsData size drift");
    assert!(core::mem::align_of::<VfsData>() == 8, "VfsData align drift");
    assert!(core::mem::offset_of!(VfsData, data) == 0, "VfsData.data offset drift");
    assert!(core::mem::offset_of!(VfsData, size) == 8, "VfsData.size offset drift");
    assert!(core::mem::offset_of!(VfsData, success) == 16, "VfsData.success offset drift");
    assert!(core::mem::offset_of!(VfsData, error_message) == 24, "VfsData.error_message offset drift");
};

/// Mount information reported by vfs_mount_get_info.
#[repr(C)]
pub struct VfsMountInfo {
    /// Original mount path.
    pub path: crate::RawStr,
    /// Mount is ready for operations.
    pub is_ready: bool,
}

const _: () = {
    assert!(core::mem::size_of::<VfsMountInfo>() == 24, "VfsMountInfo size drift");
    assert!(core::mem::align_of::<VfsMountInfo>() == 8, "VfsMountInfo align drift");
    assert!(core::mem::offset_of!(VfsMountInfo, path) == 0, "VfsMountInfo.path offset drift");
    assert!(core::mem::offset_of!(VfsMountInfo, is_ready) == 16, "VfsMountInfo.is_ready offset drift");
};

// The `fl_vfs_*` consumer service API - non-blocking virtual filesystem access
// exported as plain C symbols the toolkit and plugins call directly. All operations are async: launch
// returns a handle, then poll vfs_is_ready before reading the result. Plugins link the shared library and call these symbols directly.
extern "C" {
    /// Mount a resource (archive, URL, or directory) with options.
    pub fn vfs_mount_with_options(source_path: crate::RawStr, options: crate::VfsMountOptions) -> crate::VfsMountResult;
    /// Check if a mount is ready for operations (non-blocking).
    pub fn vfs_mount_is_ready(mount: *mut FlVfsMount) -> bool;
    /// Get a mount's status.
    pub fn vfs_mount_get_status(mount: *mut FlVfsMount) -> crate::VfsMountStatus;
    /// Get a mount's information.
    pub fn vfs_mount_get_info(mount: *mut FlVfsMount) -> crate::VfsMountInfo;
    /// Close and clean up a mount.
    pub fn vfs_mount_close(mount: *mut FlVfsMount);
    /// Enable file watching for a mount (LocalFS only). Must be called before the
    /// mount is ready. Returns true if watching was enabled.
    pub fn vfs_mount_enable_watching(mount: *mut FlVfsMount) -> bool;
    /// Read an entire file from within a mount (async). Returns a tracking handle.
    pub fn vfs_mount_read_all_with_options(mount: *mut FlVfsMount, relative_path: crate::RawStr, callback: crate::VfsReadCallback, user_data: *mut core::ffi::c_void, reuse_handle: u32) -> u32;
    /// Open a file for reading/writing within a mount. Returns a file handle.
    pub fn vfs_mount_open(mount: *mut FlVfsMount, relative_path: crate::RawStr, flags: u32) -> u32;
    /// Read at most size bytes from an open file into buffer (async, chained
    /// onto the file handle). The caller keeps buffer alive until the returned
    /// handle completes. Returns a tracking handle.
    pub fn vfs_read(file_handle: u32, buffer: *mut core::ffi::c_void, size: i64) -> u32;
    /// Write data to an open file (async, copies data). Returns a tracking handle.
    pub fn vfs_write(file_handle: u32, data: *const core::ffi::c_void, size: i64) -> u32;
    /// Write data to an open file (async, no copy - caller keeps the buffer alive
    /// until the write completes). Returns a tracking handle.
    pub fn vfs_write_no_copy(file_handle: u32, data: *mut core::ffi::c_void, size: i64) -> u32;
    /// List directory contents within a mount (async). Returns a directory handle.
    pub fn vfs_get_listing(mount: *mut FlVfsMount, relative_path: crate::RawStr, depth: i32) -> u32;
    /// List a directory with a fuzzy filter (async).
    pub fn vfs_get_listing_filtered(mount: *mut FlVfsMount, relative_path: crate::RawStr, depth: i32, filter_needle: crate::RawStr) -> u32;
    /// Apply a fuzzy filter to an existing (complete) listing (async).
    pub fn vfs_apply_fuzzy_filter(source_handle: u32, needle: crate::RawStr) -> u32;
    /// Check if an async operation is complete (non-blocking).
    pub fn vfs_is_ready(handle: u32) -> bool;
    /// Block until an async operation completes. The wait participates in the job
    /// system - a worker thread that calls it keeps stealing work instead of idling -
    /// so it is safe from inside a job body. Never call it from the frame loop.
    pub fn vfs_wait(handle: u32);
    /// Get the data from a completed read operation. Call only after vfs_is_ready.
    pub fn vfs_get_data(handle: u32) -> crate::VfsData;
    /// Get the file list from a completed directory operation. Call only after
    /// vfs_is_ready.
    pub fn vfs_get_file_list(handle: u32) -> crate::VfsFileList;
    /// Update the priority of a pending operation.
    pub fn vfs_set_priority(handle: u32, priority: crate::VfsLoadPriority);
    /// Close a handle and clean up its resources.
    pub fn vfs_close(handle: u32);
    /// Check if a directory listing is still current (its version matches the
    /// current mount version).
    pub fn vfs_is_listing_current(handle: u32) -> bool;
}

